# smart-parking-backend-dashboard

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
docs/: ARCHITECTURE.md  DATA_MODEL.md  GETTING_STARTED.md  GIT_WORKFLOW.md  MVP_SCOPE.md  PROBLEM_DEFINITION.md  PROJECT_STRUCTURE.md  SYSTEM_DESIGN.md
docs/system/: DATA_MODEL.md  MQTT_SPEC.md  SYSTEM_DESIGN.md
parking-lpr/: .gitignore  HUONG_DAN_CHAY.md  database.py  lpr.py  lpr_service.py  main.py  requirements.txt  schemas.py  test_api.py
scripts/: init_db.py  seed_db.py
src/app/: main.py
src/app/api/: admin.py  auth.py  invoices.py  parking_sessions.py  parking_slots.py  pricing_rules.py  sensors.py  vehicle.py
src/app/core/: auth_middleware.py  cors.py  dependencies.py  rate_limit.py  security.py
src/app/model/: __init__.py  invoices.py  parking_sessions.py  parking_slots.py  pricing_rules.py  roles.py  sensors.py  user.py  vehicle.py  vehicle_type.py
src/app/schemas/: admin.py  auth.py  invoices.py  parking_sessions.py  parking_slots.py  pricing_rules.py  sensors.py  vehicle.py
src/app/services/: admin_services.py  auth_services.py  invoices_services.py  parking_sessions_services.py  parking_slots.py  parking_slots_services.py  sensors.py  (+3 more)
test/: conftest.py  connect_database.py  test_auth.py
test/admin/: test_admin.py
test/auth/: test_auth.py
test/invoices/: test_invoices.py
test/parking_sessions/: test_parking_sessions.py
test/parking_slots/: test_parking_slots.py
test/pricing_rules/: test_pricing_rules.py
test/sensors/: test_sensors.py
test/vehicle/: test_vehicle.py
(+7 files in other folders)
